<resources>
    <string name="app_name">ShopAid</string>
    <string name="text_get_started">Get Started</string>
    <string name="text_loading">Loading, please wait…</string>
    <string name="text_entry_info_header">Welcome to ShopAid.</string>
    <string name="text_entry_info_subheader">A service that helps charity when you shop online.</string>
    <string name="text_entry_info">Doesn’t cost you extra, the webshop will transfer a percentage of your purchase to charity.</string>
    <string name="text_login_email">Hi there, what is your e-mail address?</string>
    <string name="text_login_email_explanation">We need your e-mail to link your purchases to your account.</string>
    <string name="text_email">E-mail</string>
    <string name="text_sign_in">Enroll</string>
    <string name="text_sign_in_google">Sign in with Google</string>
    <string name="text_charity_header">To whom would you like to contribute?</string>
    <string name="text_next">Next</string>
    <string name="text_done">Done</string>
    <string name="text_selected">%d causes selected</string>
    <string name="text_registration_complete">You\'re all set. Start shopping while making the world a better place</string>
    <string name="text_partners_header">These shops donate when you shop.</string>
    <string name="text_select_bank">Please select your bank…</string>
    <string name="text_select_bank_header">Select the bank you use for shopping:</string>
    <string name="text_credentials_header">…and login with your credentials</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_gdpr">Your data will be protected and will never be shared.</string>
    <string name="text_link_bank_account">Do you want to link your bank account to see how much the shops have donated to your charity?</string>
    <string name="text_yes_please">Yes, please!</string>
</resources>
