<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing_normal_s">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login_email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_gigantic" />

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_normal"
                    android:layout_marginTop="@dimen/spacing_normal"
                    android:background="@drawable/edit_text_bg"
                    android:hint="@string/text_email"
                    android:padding="@dimen/spacing_normal_s" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_login_email_explanation"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_normal" />

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/login_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/spacing_normal"
            android:background="@drawable/button_normal_bg"
            android:text="@string/text_sign_in"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/white" />

        <Button
            android:id="@+id/google_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/spacing_normal"
            android:background="@drawable/button_alternate_bg"
            android:text="@string/text_sign_in_google"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

    </LinearLayout>

    <include
        layout="@layout/loading_layout"
        android:visibility="gone" />

</FrameLayout>