<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/img_header" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_credentials_header"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_48" />

        <EditText
            android:id="@+id/username_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/text_username"
            android:padding="@dimen/spacing_normal_s"
            android:textColorHint="@color/dark_blue"
            android:textCursorDrawable="@null" />

        <EditText
            android:id="@+id/password_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/edit_text_bg"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:padding="@dimen/spacing_normal_s"
            android:textColorHint="@color/dark_blue"
            android:textCursorDrawable="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Your data will be protected and will never be shared."
            android:textColor="#FFFFFF"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/credentials_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/spacing_normal"
        android:background="@drawable/button_normal_bg"
        android:text="@string/text_done"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@android:color/black" />

</LinearLayout>